--- a/xebia-ios/MainStoryboard.storyboard
+++ b/xebia-ios/MainStoryboard.storyboard
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="yRD-6a-iM5">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
         <!--Tag Table View Controller - Tags-->
         <scene sceneID="11">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
-                <viewController id="2" customClass="RKWPTagTableViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="tags" title="Tags" id="2" customClass="RKWPTagTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="4CG-gz-erm" userLabel="TagTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -61,7 +60,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Hj-EB-cYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="iLd-vX-UPL" customClass="PostTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="P74-ov-t7C" userLabel="PostTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -110,7 +109,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hpj-iw-hPV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="nSK-wZ-QT8" userLabel="DetailView" customClass="DetailPostViewController" sceneMemberID="viewController">
                     <webView key="view" contentMode="scaleToFill" id="4Cf-yf-NO0" userLabel="DetailPostWebView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </webView>
@@ -122,57 +121,54 @@
             </objects>
             <point key="canvasLocation" x="140" y="-1056"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="15">
+        <!--Menu Table View Controller - Menu-->
+        <scene sceneID="vbd-ri-y8V">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
-                <tabBarController id="4" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="hfz-V0-hav"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z3n-7O-F7P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="menu" title="Menu" id="uwc-8N-vA9" customClass="RKWPMenuTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yBM-IN-ReU">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.32156862745098042" green="0.0" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search ..." id="yTC-qU-kBP">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.31324303669999998" green="0.0" blue="0.31321734620000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="tintColor" red="0.32156862745098042" green="0.0" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuItem" id="4Ti-j2-VVy">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="uwc-8N-vA9" id="wYm-LS-OjD"/>
+                            <outlet property="delegate" destination="uwc-8N-vA9" id="QbC-ds-44X"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Menu" id="IFp-Oo-ybw"/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="975" width="768" height="49"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
                     <connections>
-                        <segue destination="0G8-Ue-pVg" kind="relationship" relationship="viewControllers" id="W5k-H0-c0G"/>
-                        <segue destination="SeP-GR-Ool" kind="relationship" relationship="viewControllers" id="RTY-nw-x3G"/>
-                        <segue destination="DCI-og-SdV" kind="relationship" relationship="viewControllers" id="Txw-3g-3ZE"/>
+                        <outlet property="searchBar" destination="yTC-qU-kBP" id="bYB-cV-Juh"/>
                     </connections>
-                </tabBarController>
+                </tableViewController>
             </objects>
-            <point key="canvasLocation" x="-1951" y="-1056"/>
-        </scene>
-        <!--Navigation Controller - Tags-->
-        <scene sceneID="arv-lu-QKv">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HoJ-iX-mcd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="SeP-GR-Ool" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Tags" image="15-tags.png" id="7"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="x40-7k-gLA">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zQQ-YE-3O4">
-                        <rect key="frame" x="0.0" y="980" width="768" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="2" kind="relationship" relationship="rootViewController" id="y0C-Jw-uiX"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="-1406" y="-1738"/>
+            <point key="canvasLocation" x="-1390" y="-1056"/>
         </scene>
         <!--Category Table View Controller - Categories-->
         <scene sceneID="IWO-Ag-9mP">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GBE-jb-gW5" sceneMemberID="firstResponder"/>
-                <viewController id="SUX-yb-Q4Z" customClass="RKWPCategoryTableViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="categories" title="Categories" id="SUX-yb-Q4Z" customClass="RKWPCategoryTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YH1-H9-lDH" userLabel="CategoryTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -215,36 +211,13 @@
             </objects>
             <point key="canvasLocation" x="-881" y="-1056"/>
         </scene>
-        <!--Navigation Controller - Categories-->
-        <scene sceneID="tbF-5J-Bjs">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uqH-iI-6Mn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="DCI-og-SdV" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Categories" image="44-shoebox.png" id="V18-5V-QDU"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="yYy-xw-HZG">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6nE-IE-hJz">
-                        <rect key="frame" x="0.0" y="980" width="768" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="SUX-yb-Q4Z" kind="relationship" relationship="rootViewController" id="Jrw-Vl-MgI"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="-1398" y="-1056"/>
-        </scene>
         <!--Author Table View Controller - Authors-->
         <scene sceneID="iO1-hm-EY5">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2i-bh-h4y" sceneMemberID="firstResponder"/>
-                <viewController id="JYX-cc-v04" customClass="RKWPAuthorTableViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="authors" title="Authors" id="JYX-cc-v04" customClass="RKWPAuthorTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6ZC-wv-Qw6" userLabel="AuthorTableView">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -280,55 +253,33 @@
             </objects>
             <point key="canvasLocation" x="-881" y="-340"/>
         </scene>
-        <!--Navigation Controller - Authors-->
-        <scene sceneID="NQC-O6-cMg">
+        <!--Navigation Controller - Tags-->
+        <scene sceneID="trO-QM-i3g">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bMi-1G-AGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="0G8-Ue-pVg" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Authors" image="112-group.png" id="wIs-vF-cWO"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gnC-Lc-Msk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="yRD-6a-iM5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Tags" image="15-tags.png" id="tnm-7h-TWC"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="nLB-bE-f7I">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Qyu-RE-2K4">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vBA-Lb-YOM">
+                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Nku-hs-Fxl">
                         <rect key="frame" x="0.0" y="980" width="768" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
-                        <segue destination="JYX-cc-v04" kind="relationship" relationship="rootViewController" id="T2T-Fn-CUu"/>
+                        <segue destination="uwc-8N-vA9" kind="relationship" relationship="rootViewController" id="cug-ua-s7c"/>
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="-1398" y="-340"/>
+            <point key="canvasLocation" x="-1890" y="-1056"/>
         </scene>
     </scenes>
     <resources>
-        <image name="112-group.png" width="32" height="21"/>
         <image name="15-tags.png" width="24" height="25"/>
-        <image name="44-shoebox.png" width="24" height="22"/>
     </resources>
-    <classes>
-        <class className="DetailPostViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailPostViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="PostTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostTableViewController.h"/>
-        </class>
-        <class className="RKWPAuthorTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPAuthorTableViewController.h"/>
-        </class>
-        <class className="RKWPCategoryTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPCategoryTableViewController.h"/>
-        </class>
-        <class className="RKWPTagTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RKWPTagTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
